# flask-fast-dlt

./: .env  README.md  docker-compose.yml  pyproject.toml
mock_server/: Dockerfile  app.py
mock_server/.dlt/: secrets.toml
mock_server/data/: customers.json
pipeline_service/: Dockerfile  database.py  main.py  requirements.txt
pipeline_service/models/: customer.py
pipeline_service/services/: ingestion.py
