[project]
name = "flask-fast-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt[postgres,workspace]>=1.23.0",
    "duckdb>=1.4.4",
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
    "workspace>=0.3.1",
]
